Fix splash alignment on mobile screens

--- a/src/components/home/HomeLayout.module.css
+++ b/src/components/home/HomeLayout.module.css
@@ -66,13 +66,8 @@
         }
     }
 
-    .splashSectionLeft {
-        width: 80%;
-        text-align: center;
-    }
-
-    .splashSectionRight {
-        width: 60%;
+    .splashSectionLeft, .splashSectionRight {
+        width: 100%;
         text-align: center;
     }
 }
